Implement sieve on Admin (player list view): sort and pagination
